; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/psql/extr_common.c_StoreQueryTuple.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/psql/extr_common.c_StoreQueryTuple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [27 x i8] c"no rows returned for \\gset\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"more than one row returned for \\gset\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1
@pset = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @StoreQueryTuple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @StoreQueryTuple(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  store i32 1, i32* %3, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @PQntuples(i32* %8)
  %10 = icmp slt i32 %9, 1
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32 @pg_log_error(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %58

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @PQntuples(i32* %14)
  %16 = icmp sgt i32 %15, 1
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = call i32 @pg_log_error(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %57

19:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %20

20:                                               ; preds = %53, %19
  %21 = load i32, i32* %4, align 4
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @PQnfields(i32* %22)
  %24 = icmp slt i32 %21, %23
  br i1 %24, label %25, label %56

25:                                               ; preds = %20
  %26 = load i32*, i32** %2, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i8* @PQfname(i32* %26, i32 %27)
  store i8* %28, i8** %5, align 8
  %29 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 1), align 4
  %30 = load i8*, i8** %5, align 8
  %31 = call i8* @psprintf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %29, i8* %30)
  store i8* %31, i8** %6, align 8
  %32 = load i32*, i32** %2, align 8
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @PQgetisnull(i32* %32, i32 0, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %40, label %36

36:                                               ; preds = %25
  %37 = load i32*, i32** %2, align 8
  %38 = load i32, i32* %4, align 4
  %39 = call i8* @PQgetvalue(i32* %37, i32 0, i32 %38)
  store i8* %39, i8** %7, align 8
  br label %41

40:                                               ; preds = %25
  store i8* null, i8** %7, align 8
  br label %41

41:                                               ; preds = %40, %36
  %42 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 4
  %43 = load i8*, i8** %6, align 8
  %44 = load i8*, i8** %7, align 8
  %45 = call i32 @SetVariable(i32 %42, i8* %43, i8* %44)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %50, label %47

47:                                               ; preds = %41
  %48 = load i8*, i8** %6, align 8
  %49 = call i32 @free(i8* %48)
  store i32 0, i32* %3, align 4
  br label %56

50:                                               ; preds = %41
  %51 = load i8*, i8** %6, align 8
  %52 = call i32 @free(i8* %51)
  br label %53

53:                                               ; preds = %50
  %54 = load i32, i32* %4, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %4, align 4
  br label %20

56:                                               ; preds = %47, %20
  br label %57

57:                                               ; preds = %56, %17
  br label %58

58:                                               ; preds = %57, %11
  %59 = load i32, i32* %3, align 4
  ret i32 %59
}

declare dso_local i32 @PQntuples(i32*) #1

declare dso_local i32 @pg_log_error(i8*) #1

declare dso_local i32 @PQnfields(i32*) #1

declare dso_local i8* @PQfname(i32*, i32) #1

declare dso_local i8* @psprintf(i8*, i32, i8*) #1

declare dso_local i32 @PQgetisnull(i32*, i32, i32) #1

declare dso_local i8* @PQgetvalue(i32*, i32, i32) #1

declare dso_local i32 @SetVariable(i32, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
